fixed scrolling issue on mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -17,8 +17,8 @@ body {
     padding: 2rem;
     text-align: center;
     /* overflow: hidden; */
-    width: 100vw;
-    height: 100vh;
+    /* width: 100vw;
+    height: 100vh; */
 }
 
 .sparkle {
